--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "nuxt": "^2.0.0",
+    "sortablejs": "^1.10.0",
+    "vuedraggable": "^2.23.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
